--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,7 +368,19 @@ body { background: var(--white); }
 
 
 
+.whatsapp-float {
+  position: fixed;
+  left: 20px;
+  bottom: 20px;
+  z-index: 1000;
+}
 
+.whatsapp-icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
 
 /*-----------------------------------*\
  * #HERO
